--- a/static/css/scss/styles.scss
+++ b/static/css/scss/styles.scss
@@ -27,12 +27,21 @@ $error: #ff3e3e;
     height: 100%
 }
 
+.cwppb-text-wrapper {
+    position: relative
+}
+
 .cwppb__text {
-    position: relative;
+    display: inline-block;
     max-width: 80%
 }
 
 @media (max-width: 767px) {
+    .cwppb {
+        padding-left: 0 !important;
+        padding-right: 0 !important
+    }
+
     .cwppb__title {
         font-size: 30px !important;
         text-align: center
